fix(website): Improve color contrast of register button

--- a/source/landing/css/style.css
+++ b/source/landing/css/style.css
@@ -45,9 +45,14 @@ a, button {
     margin: 0 0 5px 5px;
 }
 
-.btn-d, .btn-d:hover, .btn-d:focus {
+.btn-d {
     color: #FFF;
-    background: rgba(0, 0, 0, .3);
+    background-color: rgba(51, 51, 51, .8);
+}
+
+.btn-d:hover, .btn-d:focus {
+    color: #FFF;
+    background-color: rgba(51, 51, 51, .68);
 }
 
 /* Prevent ugly blue glow on chrome and safari */
